<resources>
    <string name="app_name">Quick Connect</string>
    <string name="title_chats">Chats</string>
    <string name="title_groups">Groups</string>
    <string name="title_settings">Settings</string>
    <string name="title_blogs">Blogs</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="message">Message</string>
    <string name="icon">icon</string>
    <string name="connect">Connect</string>
    <string name="reconnect">Reconnect</string>
    <string name="unpair">Unpair</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="search">Search</string>
    <string name="no_chats_found">😕 No chats found</string>
    <string name="eg_mac_address">00:11:22:33:AA:BB</string>
    <string name="status_connected">Connected</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_connecting">Connecting</string>
    <string name="device_name">Device Name</string>
    <string name="welcome_text">Hello</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
    <string name="save_name">Save Name</string>
    <string name="discoverable">Discoverable</string>
    <string name="notifications">Notifications</string>
    <string name="vibration_notifications">Vibration Notifications</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="continue_txt">Continue</string>
    <string name="user_name">User Name</string>
    <string name="select_photo_file">Select Photo/File</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="sender_name">Sender Name</string>
</resources>