<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Preview -->
        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/image"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Attach button -->
            <ImageButton
                android:id="@+id/btnSelectMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_add_photo_alternate"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/select_photo_file"/>

            <!-- selected file -->
            <TextView
                android:id="@+id/selectedFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLines="1"/>

        </LinearLayout>
        <!-- Text input -->
        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/edit_text"
            android:padding="8dp"
            android:maxLines="4"/>

        <!-- Actions -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnClose"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
